--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.36.0",
+    "prettier": "^2.8.4",
     "react-router-dom": "^6.6.2"
   }
 }
